@@ -21046,7 +21046,16 @@ EOF
           chmod +x wrapper.sh
           ./wrapper.sh \
            $testcvs -z5 -Q diff --side-by-side -W 500 -r 1.1 -r 1.2 \
-             aaa > wrapper.dif
+             aaa \
+	   |sed -e \
+'/^Write failed flushing stdout buffer\.\?$/d;
+ /^write stdout: Broken pipe\?$/d;
+ : retry
+ /\(Write failed flushing stdout buffer\.\|write stdout: Broken pipe\)\?$/{
+	N;
+	s/\(Write failed flushing stdout buffer\.\|write stdout: Broken pipe\)\?\n//;
+	b retry;}' \
+          > wrapper.dif
   
           $testcvs -z5 -Q diff --side-by-side -W 500 -r 1.1 -r 1.2 \
              aaa > good.dif
